--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,10 +1,12 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
+title: 'Reproducible Research: Peer Assessment 1'
 author: "Felipe Villota"
-output: 
+output:
   html_document:
-    keep_md: true
+    keep_md: yes
+  pdf_document: default
 ---
+
 
 
 # Creating an setting the directory 
